fix top arrow size on small screens

--- a/app/javascript/stylesheets/components/top.scss
+++ b/app/javascript/stylesheets/components/top.scss
@@ -44,10 +44,7 @@
 
 @media screen and (max-width: 800px) and (orientation: portrait) {
   .top-visible {
-    height: 40px;
-    width: 40px;
     background-color: #4C4643;
-    font-size: 25px;
     top: 94%;
     left: 92%;
     margin-bottom: 20px;
